--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
